system_sync_testbed/projects/defaultproject/constrainttemplates/ankit.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  labels:
    rafay.dev/opa: template
  name: ankit
  project: defaultproject
spec:
  artifact:
    artifact:
      paths:
      - name: demo-files/constrainttemplates/artifacts/two/gatekeeper-allowedrepos-constraint-template-regex.yaml
      repository: ankit-opa
      revision: main
    options: {}
    type: Yaml
