system_sync_testbed/projects/defaultproject/constrainttemplates/new-template-amrish.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  labels:
    rafay.dev/opa: template
  name: new-template-amrish
  project: defaultproject
spec:
  artifact:
    artifact: {}
    options: {}
    type: Yaml
