system_sync_testbed/projects/defaultproject/constrainttemplates/ram-k8scontainerlimits.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  labels:
    rafay.dev/opa: template
  name: ram-k8scontainerlimits
  project: defaultproject
spec:
  artifact:
    artifact:
      paths:
      - name: file://artifacts/ram-k8scontainerlimits/k8scontainerlimits_contrainttemplate.yaml
    options: {}
    type: Yaml
