system_sync_testbed/projects/defaultproject/constrainttemplates/ram-test2.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  labels:
    rafay.dev/opa: template
  name: ram-test2
  project: defaultproject
spec:
  artifact:
    artifact: {}
    options: {}
    type: Yaml
