system_sync_testbed/projects/defaultproject/constrainttemplates/test44.yaml
apiVersion: opa.k8smgmt.io/v3
kind: ConstraintTemplate
metadata:
  labels:
    rafay.dev/opa: template
  name: test44
  project: defaultproject
spec:
  artifact:
    artifact: {}
    options: {}
    type: Yaml
